--- a/config/aaru.conf
+++ b/config/aaru.conf
@@ -1,5 +1,13 @@
 # Copyright (c) 2022 Luantty2
 # SPDX-License-Identifier: MIT
 
-# Uncomment to enable USB logging
-# CONFIG_ZMK_USB_LOGGING=y
+# Sleep
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
+
+# NKRO
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
+
+# LED Indicator
+CONFIG_ZMK_LED_INDICATORS=y
+CONFIG_ZMK_LED_INDICATORS_BRT=80
